# Nebula-Writer-2

./: .dockerignore  .env.example  .gitignore  .kiloignore  .pre-commit-config.yaml  =2.2.0  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STATE.md  QUICK_START.md  README.md  SECURITY.md  SPEC.md  buttons.txt  devops.py  docker-compose.yml  frontend_verification.webm  migrate.py  nebula-writer  pr_body.md  pyproject.toml  repl.py  requirements.txt  schema_migration.sql  setup.py  test_sqli.py  test_sqli3.py  test_sqli4.py
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
.kilo/: kilo.json
.specify/: feature.json  init-options.json  integration.json
backend/: __init__.py  ai_client.py  ai_writer.py  audit.py  codex.py  comment_system.py  config.py  context_window.py  conversation.py  exporter.py  idea_processor.py  lookahead_engine.py  main.py  memory.py  outline_engine.py  plot_manager.py  postgres_db.py  prompts.py  research.py  ripple_checker.py  run_supabase.py  search.py  smart_ai.py  supabase_client.py  supabase_db.py
deploy_gemma/: Dockerfile  README.md  app.py  requirements.txt
docs/: API.md  ARCHITECTURE.md  AutoNovelist_BRD.docx  AutoNovelist_BRD_v2.1.docx  AutoNovelist_Full_Design_Document.docx  AutoNovelist_UI_Implementation_Plan (1).docx  BRD_GAP_ANALYSIS.md  DEVELOPMENT.md  FEATURES.md  README.md  SUPABASE_SETUP.md  autonovelist_ui_mockup.html
frontend/: index.html  onboarding_wizard.js
nebula_writer/: ai_client.py  ai_writer.py  anti_slop.py  audit.py  codex.py  comment_system.py  config.py  context_window.py  conversation.py  exporter.py  idea_processor.py  lookahead_engine.py  main.py  memory.py  memory_pgvector.py  models.py  outline_engine.py  plot_manager.py  search.py  (+11 more)
(+57 files in other folders)
